@@ -1,3 +1,6 @@
+	* Fixed bug #850931 as well as several other minor bugs in
+	Utilities.re.
+	
 	* Fixed bug #851254, Factoids.whatis didn't work on numeric keys.
 
 	* Added the ability to turn on/off the showing of ids in FunDB
